Swagger Terminado
Se completo la actualización del swagger y también se quito la encriptación.
